--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ affordable architects UK
         }
         
         .hero-image {
-          background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("F8.JPG");
+          background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("./j1.jpg");
           height: 90%;
           background-position: center;
           background-repeat: no-repeat;
